--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 $light-color: #f4f4f4;
 $font-stack: Arial, Helvetica, sans-serif;
+$prymary-color: #0e6cff;
+$secondary-color: #ff8700;
 
 *,
 *::after,
@@ -13,4 +15,66 @@ body {
   background-color: $light-color;
   font-family: $font-stack;
   line-height: 1.6;
+}
+
+img {
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+.showcase {
+  background-color: $prymary-color;
+  color: #f4f4f4;
+  height: 600px;
+
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    ul {
+      display: flex;
+      list-style-type: none;
+    }
+
+    li {
+      padding: 15px;
+    }
+    a:hover {
+      color: $secondary-color;
+    }
+  }
+
+  a {
+    color: #f4f4f4;
+  }
+
+  &-content {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      width: 50%;
+    }
+
+    h1 {
+      font-size: 50px;
+      line-height: 1.2;
+    }
+    p {
+      margin: 20px 0;
+    }
+  }
+}
+
+.container {
+  max-width: 1100px;
+  padding: 0 30px;
+  margin: 0 auto;
+  overflow: auto;
 }
