--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "config";
 @import "utils";
 @import "buttons";
+@import "mobile";
 
 *,
 *::after,
@@ -18,6 +19,7 @@ body {
 
 img {
   width: 100%;
+  border-radius: 8px;
 }
 
 a {
